feat(game): allow safe pet renaming
